Add click to start, no restart yet

--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
     <meta charset="utf-8">
     <title>Rapture-BG</title>
     <script src="bundle.js"></script>
+    <link rel="stylesheet" href="assets/stylesheets/background.css">
     <style>
+
     	* { padding: 0; margin: 0; }
-    	canvas {background: url('assets/images/bg1.png'); display: block; margin: auto; margin-top: 100px;}
+    	canvas {background: url('assets/images/bg_final.png'); display: block; margin: auto; z-index: 1; border-radius: 25px;}
     </style>
   </head>
   <body>
-    <canvas class="canvas" id="canvas" width="1500" height="700"></canvas>
+    <header>
+      <img class="welcome_sign" src="assets/images/background/welcome_sign.png"/>
+    </header>
+    <canvas class="canvas" id="canvas" width="1535" height="770"></canvas>
+    <footer>
+    </footer>
   </body>
 </html>
