--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@
     <header>
       <img class="welcome_sign" src="assets/images/background/welcome_sign.png"/>
     </header>
-    <canvas class="canvas" id="canvas" width="1535" height="770"></canvas>
+    <div class="canvas_container">
+      <canvas class="canvas" id="canvas" width="1535" height="770">
+      </canvas>
+      <div class="start_screen">
+        <img id="start" class="start_button" src='assets/images/start_button.png'/>
+
+        <img id="game_over" class="restart_button" src="assets/images/game_over_again.jpg">
+      </div>
+    </div>
     <footer>
     </footer>
   </body>
