Add gameover modal

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       </canvas>
       <div class="start_screen">
         <img id="start" class="start_button" src='assets/images/start_button.png'/>
-
+      </div>
+      <div class="gameover_screen">
         <img id="game_over" class="restart_button" src="assets/images/game_over_again.jpg">
       </div>
     </div>
