--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     </style>
   </head>
   <body>
+    <audio src="https://s3.amazonaws.com/ampafy-seeds/cave+themeb4.ogg" autoplay>
+
+    </audio>
     <header>
       <img class="welcome_sign" src="assets/images/background/welcome_sign.png"/>
     </header>
