Update current frames on restart, add css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <style>
     	* { padding: 0; margin: 0; }
-    	canvas {background: url('assets/images/bg_final.png'); display: inline;  z-index: 1; border-radius: 25px; margin: auto;}
+    	canvas {background: url('assets/images/bg_final.png'); display: inline;  z-index: 1; border-radius: 25px; margin-top: 0; margin-left: auto; margin-right: 0; margin-bottom: auto;}
     </style>
   </head>
   <body>
