--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
     </style>
   </head>
   <body>
-    <audio src="https://s3.amazonaws.com/ampafy-seeds/cave+themeb4.ogg" autoplay>
-
+    <audio id="cave_theme"
+      src="https://s3.us-east-2.amazonaws.com/rapture-bg/cave+themeb4.ogg"
+      autoplay loop>
+    </audio>
+    <audio id="audio_hover"
+      src="https://s3.us-east-2.amazonaws.com/rapture-bg/ambience-3.wav">
     </audio>
     <header>
       <img class="welcome_sign" src="assets/images/background/welcome_sign.png"/>
@@ -29,7 +33,7 @@
             </li>
             <li>Fire</li>
             <li>
-              <img class="spacebar"     src="assets/images/spacebar.png">
+              <img class="spacebar" src="assets/images/spacebar.png">
             </li>
           </ul>
         </div>
