--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       src="https://s3.us-east-2.amazonaws.com/rapture-bg/cave+themeb4.ogg"
       autoplay loop>
     </audio>
-    <audio id="music" loop src="https://s3.us-east-2.amazonaws.com/rapture-bg/cave_mixed.ogg">
+    <audio id="music" loop src="https://s3.us-east-2.amazonaws.com/rapture-bg/I-Robot2+Loop.wav">
     </audio>
     <audio id="audio_hover" preload="auto"
       src="https://s3.us-east-2.amazonaws.com/rapture-bg/ambience-3.wav">
