--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
             <li>Fire</li>
             <li>
               <img class="spacebar" src="assets/images/spacebar.png">
+              <div class="rof">Hold for increased rate of fire</div>
             </li>
+
           </ul>
         </div>
         <div class="">
