Add game timer and score screen

--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
               <img class="spacebar" src="assets/images/spacebar.png">
               <div class="rof">Hold for increased rate of fire</div>
             </li>
+            <li id="timer">
 
+            </li>
           </ul>
         </div>
         <div class="">
@@ -59,6 +61,9 @@
             <button id="start" class="start_button" type="button" name="button">Press Start</button>
           </div>
           <div class="gameover_screen">
+            <div id="score_screen" class="score_screen">
+              
+            </div>
             <button id="game_over" class="restart_button" type="button" name="button">Play again?</button>
           </div>
         </div>
