Add styling to timer and scorescreen

--- a/index.html
+++ b/index.html
@@ -40,18 +40,16 @@
       <div class="canvas_two_container">
         <div class="left_sidebar_links_container">
           <ul class="left_sidebar_links">
-            <li class='move_text'>Move</li>
+            <li class="text_underline">Move</li>
             <li>
               <img class="keys" src="assets/images/arrows_pop.png">
             </li>
-            <li>Fire</li>
+            <li class="text_underline">Fire</li>
             <li>
               <img class="spacebar" src="assets/images/spacebar.png">
-              <div class="rof">Hold for increased rate of fire</div>
+              <div class="rof">(Hold for increased rate of fire)</div>
             </li>
-            <li id="timer">
-
-            </li>
+            <li id="timer" class='timer'></li>
           </ul>
         </div>
         <div class="">
@@ -62,8 +60,10 @@
           </div>
           <div class="gameover_screen">
             <div id="score_screen" class="score_screen">
-              
+
             </div>
+          </div>
+          <div class="gameover_button">
             <button id="game_over" class="restart_button" type="button" name="button">Play again?</button>
           </div>
         </div>
