--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     </style>
   </head>
   <body>
+    <audio id="monster_death" src="https://s3.us-east-2.amazonaws.com/rapture-bg/monster_growl.ogg">
+    </audio>
     <audio id="grunt"   src="https://s3.us-east-2.amazonaws.com/rapture-bg/gruntsound.ogg">
     </audio>
     <audio id="monster_hit" src="https://s3.us-east-2.amazonaws.com/rapture-bg/flyswatter.ogg">
