Add progress bar

--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
         </div>
       </div>
     </div>
-    <footer>
+    <footer class="healthbar_container">
+      <progress class="healthbar" id="health" value="500" max="500"></progress>
     </footer>
   </body>
 </html>
