Add styling to healthbar

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       </div>
     </div>
     <footer class="healthbar_container">
-      <progress class="healthbar" id="health" value="500" max="500"></progress>
+      <progress class="healthbar" id="healthbar" value="400" max="400"></progress>
     </footer>
   </body>
 </html>
