Add mute button

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <canvas class="canvas" id="canvas" width="1535" height="770">
           </canvas>
           <div class="start_screen">
-            <button id="start" class="start_button" type="button" name="button">Press Start</button>
+            <button id="start" class="start_button" type="button" name="button">Press Enter</button>
           </div>
           <div class="gameover_screen">
             <div id="score_screen" class="score_screen">
@@ -85,6 +85,9 @@
             </li>
             <li>
               <a href="https://www.linkedin.com/in/cody-mccabe-114385b0/"><img class="linkedin" src="assets/images/linkedin_logo.png"></a>
+            </li>
+            <li>
+              <img id="audio" class="audio-mute" src="assets/images/audio_play.png"/>
             </li>
           </ul>
         </div>
