--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Rapture-BG</title>
     <script src="bundle.js"></script>
+    <link rel="icon" href="assets/images/cave_icon.png" type="image/png">
     <link rel="stylesheet" href="assets/stylesheets/background.css">
     <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
