--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       </div>
     </div>
     <footer class="healthbar_container">
-      <progress class="healthbar" id="healthbar" value="1000" max="1000"></progress>
+      <progress class="healthbar" id="healthbar"></progress>
     </footer>
   </body>
 </html>
